force-app/main/default/objects/PS_Lead_Time__c/PS_Lead_Time__c.object-meta.xml
<CustomObject>
    <label>PS Lead Time</label>
    <nameField>
        <label>PS_Lead_Time</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Lead Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>