force-app/main/default/objects/PS_Lead_Time__c/fields/Lead_Time_30_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_30_Override__c</fullName>
    <label>Lead Time 30 Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>