force-app/main/default/objects/PS_Lead_Time__c/fields/RunTimeSchedule__c.field-meta.xml
<CustomField>
    <fullName>RunTimeSchedule__c</fullName>
    <label>RunTimeSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>