force-app/main/default/objects/PS_Lead_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASSYPARTNO__c</columns>
    <columns>RunTimeSchedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSYPARTNO__c</field>
        <operation>equals</operation>
        <value>5210501B8600000000</value>
    </filters>
    <label>All</label>
</ListView>